frontend/src/assets/sass/complaint.scss
/* ... */
// COMPLAINT TABLE - GENERAL COMPLAINTS
.gc-table {
  &-date-cell {
    white-space: nowrap;
  }
  &-actions-cell {
    text-align: center;
  }
}

// COMPLAINT DETAILS AND EDIT PAGES
// COMPLAINT HEADER COMPONENT
.comp-details-header {
  color: $white;
  background: $bc-gov-primary-400;

  h1 {
    margin: 0;
    font-size: 1.5rem;
    font-weight: 700;
  }
}

@include media-breakpoint-up(xl) {
  .comp-details-header {
    position: sticky;
    top: 0;
    z-index: 8000;
  }
}

.comp-details-title-container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: center;
  gap: 8px;
  row-gap: 4px;
}

.comp-details-title-info {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: center;
  gap: 16px;
  row-gap: 8px;
  order: 0;
}

.comp-details-badge-container {
  display: flex;
  flex-direction: row;
  gap: 8px;

  .hwcr-conflict-type-badge {
    background-color: $bc-standard-03 !important;
  }
}

.refer-complaint-agency {
  .comp-select__control {
    padding: 8px;
  }
  &--new {
    @extend .refer-complaint-agency;
    label {
      font-weight: 700;
      color: $black !important;
    }
  }
}

.comp-nature-of-complaint {
  margin-top: 4px;
  max-width: 48ch;
}

// HEADER ACTIONS
.comp-header-actions {
  justify-self: flex-end;
  margin-left: auto;
  white-space: nowrap;

  .btn {
    min-height: 38px;
    font-size: 0.875rem;

    + .btn {
      margin-left: 8px;
    }

    &.icon-btn {
      color: inherit;
      border-color: $white;
    }
  }
}

.comp-header-actions-desktop {
  display: none;
}

@include media-breakpoint-up(lg) {
  .comp-header-actions-desktop {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
  }

  .comp-header-actions-mobile {
    display: none;
  }
}

// HEADER STATUS CONTAINER
.comp-header-status-container {
  container-type: inline-size;
  container-name: detail-container;
}

.comp-details-status {
  display: grid;
  grid-template-columns: 50% 50%;
  row-gap: 6px;
  margin: -0.5rem;
  dl {
    margin-bottom: 0;
    padding: 0.5rem;
  }

  dt {
    margin-bottom: 4px;
    white-space: nowrap;
    font-weight: 700;
  }

  dd {
    display: flex;
    align-items: center;
    margin: 0;
    height: 32px;
    white-space: nowrap;
  }
}

@container detail-container (min-width: 600px) {
  .comp-details-status {
    grid-template-columns: 50% 50%;
  }
}

@container detail-container (min-width: 900px) {
  .comp-details-status {
    grid-template-columns: auto auto auto auto;
  }
}

// BADGE CUSTOMIZATION
.comp-status-badge-open {
  background-color: $green-100-80 !important;
  color: $green-100;
}

.comp-status-badge-closed {
  background-color: $gray-100 !important;
  color: $gray-700;
}

.comp-status-badge-pending-review {
  background-color: $red-300-80 !important;
  color: $red-300;
}

.comp-status-badge-threat-level {
  background-color: $red-300-80;
  color: $red-300;
}

.comp-status-badge-conflict-history {
  background-color: $blue-400;
  color: $bc-gov-primary-700;
}

.comp-violation-in-progress {
  background-color: $red-300-80;
  color: $red-300;
}

// DATE/TIME VALUE DISPLAY
.comp-date-time-value {
  display: flex;
  flex-direction: row;
  gap: 4px;
  white-space: nowrap;
  div {
    display: flex;
    gap: 8px;
  }
  div + div {
    margin-left: 8px;
  }
}

// COMPLAINT DETAILS BODY
.comp-details-body {
  padding: 24px;

  h2,
  h3,
  h4 {
    font-weight: 700;
  }

  h2 {
    margin-bottom: 1.5rem;
    font-size: 1.5rem;
  }

  h3 {
    margin-bottom: 1rem;
    font-size: 1.25rem;
  }

  h4 {
    font-size: 1.25rem;
  }

  h5 {
    font-size: 1rem;
  }

  section + section {
    margin-top: 32px;
  }
}

.comp-details-body + section {
  .comp-details-body-spacer {
    display: block;
  }
}

.comp-referral-banner {
  background-color: $bc-gov-warning;
  min-height: 40px;
  color: $gray-900;
  .referral-content {
    max-width: 1200px;
    margin: 0 auto;
    padding: 8px 24px;
  }
}

.comp-details-body-spacer {
  display: none;
  margin-top: -24px;
  margin-bottom: 24px;
  height: 2px;
  color: $gray-600;
  border: 1px solid $gray-600;
}

// CALL DETAILS SECTION
.comp-details-section {
  dl {
    display: flex;
    flex-direction: column;
    row-gap: 12px;
    margin-bottom: 0;

    > div {
      display: flex;
      flex-direction: column;
      gap: 4px;
    }

    + dl {
      margin-top: 8px;
    }
  }

  dt {
    flex: 0 0 auto;
    font-weight: 400;
    color: $gray-700;
  }

  dd {
    flex: 0 0 auto;
    margin: 0;

    ul {
      margin: 0;
      padding-left: 1.5rem;
    }

    .comp-avatar {
      margin: -0.25rem;
    }
  }

  pre {
    margin-bottom: 0;
    font-family: inherit;
    font-size: 1rem;
    white-space: pre-wrap;
    word-break: break-word;
  }

  .comp-lat-long {
    display: flex;
    flex-direction: row;
    gap: 8px;

    & span:first-of-type {
      &::after {
        display: inline-block;
      }
    }
  }

  .section-error-message {
    margin-bottom: 1rem;
  }

  .card.border-danger {
    border-width: 3px;

    .card-body {
      padding: 21px; //offset border-width so padding aligns
    }
  }
}

@include media-breakpoint-up(lg) {
  .comp-details-section {
    dl {
      > div {
        display: flex;
        flex-direction: row;
        gap: 16px;
      }
    }

    dt {
      width: 16rem;
    }

    dd {
      flex: 1 1 auto;
    }
  }
}

@include media-breakpoint-up(xl) {
  .comp-details-section {
    dt {
      width: 18rem;
    }

    dd {
      flex: 1 1 auto;
    }
  }
}

.comp-details-section-header {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  justify-content: space-between;

  .btn {
    font-size: 0.875rem;
  }
}

.comp-details-section-header-actions {
  button + button {
    margin-left: 8px;
  }
}

.comp-complaint-details {
  .comp-details-content-label {
    color: $gray-700;
  }

  .comp-details-content {
    color: $gray-900;

    i.bi {
      color: $gray-500;
    }
  }
}
/* ... */

